--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   unifi:
-    image: ryansch/unifi-rpi
+    image: ryansch/unifi-rpi:v5
     container_name: unifi
     network_mode: host
     volumes:
