--- a/traefik.yml
+++ b/traefik.yml
@@ -22,7 +22,11 @@ services:
       - run2:/run/unifi
       - work:/usr/lib/unifi/work
     labels:
-      - "traefik.frontend"
+      - "traefik.enable=true"
+      - "traefik.docker.network=unifi"
+      - "traefik.controller.frontend.rule=Host:my-awesome-app.org"
+      - "traefik.controller.port=8443"
+      - "traefik.controller.protocol=https"
   traefik:
     image: traefik:1.6
     container_name: traefik
@@ -54,4 +58,3 @@ volumes:
     driver: local
 networks:
   unifi:
-    name: unifi
