--- a/5.7/manifest.yml
+++ b/5.7/manifest.yml
@@ -1,5 +1,5 @@
 image: ryansch/unifi-rpi:5.7.23
-tags: ['5.7', '5', 'latest']
+tags: ['5.7']
 manifests:
   -
     image: ryansch/unifi-rpi:5.7.23-amd64
