--- a/traefik.toml
+++ b/traefik.toml
@@ -1,6 +1,6 @@
 debug = false
 
-logLevel = "ERROR"
+logLevel = "WARN"
 defaultEntryPoints = ["https","http"]
 insecureSkipVerify = true
 
@@ -44,13 +44,14 @@ insecureSkipVerify = true
 
 [docker]
 endpoint = "unix:///var/run/docker.sock"
-domain = "my-awesome-app.org"
+domain = "CHANGEME"
 watch = true
 exposedByDefault = false
 
 [acme]
-email = "your-email-here@my-awesome-app.org"
+email = "CHANGEME"
 storage = "acme.json"
+entryPoint = "https"
 onHostRule = true
 [acme.httpChallenge]
   entryPoint = "http"
