--- a/traefik.toml
+++ b/traefik.toml
@@ -22,19 +22,7 @@ insecureSkipVerify = true
       ]
 
   [entryPoints.api]
-    address = ":4443"
-
-    [entryPoints.api.tls]
-      minVersion = "VersionTLS12"
-      cipherSuites = [
-        "TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256",
-        "TLS_RSA_WITH_AES_256_GCM_SHA384"
-      ]
-    [entryPoints.api.auth]
-     [entryPoints.api.auth.basic]
-       users = [
-         "unifi:$2y$05$xVd0Bq7yun1kTS8fyIoA/.xoS3gdgNg9fzHPxhjRTjLiEETXzvXJC"
-       ]
+    address = ":8888"
 
 [api]
   entryPoint = "api"
@@ -55,3 +43,21 @@ entryPoint = "https"
 onHostRule = true
 [acme.httpChallenge]
   entryPoint = "http"
+
+[file]
+  [backends]
+    [backends.backend1]
+      [backends.backend1.servers.server1]
+        url = "http://127.0.0.1:8888"
+
+  [frontends]
+    [frontends.frontend1]
+      entryPoints = ["https"]
+      backend = "backend1"
+      basicAuth = [
+        # Example with 123qweasd as the password
+        "unifi:$2y$05$xVd0Bq7yun1kTS8fyIoA/.xoS3gdgNg9fzHPxhjRTjLiEETXzvXJC"
+      ]
+      [frontends.frontend1.routes]
+        [frontends.frontend1.routes.route0]
+          rule = "PathPrefixStrip:/traefik"
