--- a/traefik.toml
+++ b/traefik.toml
@@ -55,7 +55,7 @@ onHostRule = true
       entryPoints = ["https"]
       backend = "backend1"
       basicAuth = [
-        # Example with 123qweasd as the password
+        # Example with 123qweasd as the password (CHANGEME)
         "unifi:$2y$05$xVd0Bq7yun1kTS8fyIoA/.xoS3gdgNg9fzHPxhjRTjLiEETXzvXJC"
       ]
       [frontends.frontend1.routes]
