--- a/5.9/Dockerfile.amd64
+++ b/5.9/Dockerfile.amd64
@@ -1,5 +1,12 @@
-FROM resin/rpi-raspbian:latest
+FROM debian:stretch
 MAINTAINER Ryan Schlesinger <ryan@ryanschlesinger.com>
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    wget \
+    ca-certificates \
+    gnupg \
+    dirmngr \
+    && rm -rf /var/lib/apt/lists/*
 
 RUN apt-key adv --keyserver keyserver.ubuntu.com --recv C0A52C50 && \
     echo "deb http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main" \
@@ -22,12 +29,12 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Use dpkg to mark the package for install (expect it to fail to complete the installation)
 # Use apt-get install -f to complete the installation with dependencies
 ENV UNIFI_VERSION 5.9.12-ZD3vz8Yw57I
-RUN apt-get update && apt-get install -y --no-install-recommends wget && \
-      mkdir -p /tmp/build && \
+RUN mkdir -p /tmp/build && \
       cd /tmp/build && \
       wget https://www.ubnt.com/downloads/unifi/${UNIFI_VERSION}/unifi_sysvinit_all.deb && \
-      dpkg --install unifi_sysvinit_all.deb ; \
-      apt-get install -f && \
+      apt-get update && apt-get install -y --no-install-recommends \
+      ./unifi_sysvinit_all.deb \
+      procps && \
       rm -rf /var/lib/apt/lists/* && \
       rm -rf /tmp/build
 
