--- a/5.8/manifest.yml
+++ b/5.8/manifest.yml
@@ -1,14 +1,15 @@
-image: ryansch/unifi-rpi:5.8.24
-tags: ['5.8', '5', 'latest']
+image: ryansch/unifi-rpi:5.8.25
+# tags: ['5.8', '5', 'latest']
 manifests:
   -
-    image: ryansch/unifi-rpi:5.8.24-amd64
+    image: ryansch/unifi-rpi:5.8.25-amd64
     platform:
       architecture: amd64
       os: linux
   -
-    image: ryansch/unifi-rpi:5.8.24-arm
+    image: ryansch/unifi-rpi:5.8.25-arm32v7
     platform:
       architecture: arm
       os: linux
+      variant: v7
 
