--- a/5.9/Dockerfile.amd64
+++ b/5.9/Dockerfile.amd64
@@ -29,6 +29,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Use dpkg to mark the package for install (expect it to fail to complete the installation)
 # Use apt-get install -f to complete the installation with dependencies
 ENV UNIFI_VERSION 5.9.29-04b5d20997
+ENV UNIFI_DOCKER_VERSION 5.9.29
 RUN mkdir -p /tmp/build && \
       cd /tmp/build && \
       wget https://www.ubnt.com/downloads/unifi/${UNIFI_VERSION}/unifi_sysvinit_all.deb && \
