--- a/5.9/Dockerfile.arm32v7
+++ b/5.9/Dockerfile.arm32v7
@@ -22,6 +22,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Use dpkg to mark the package for install (expect it to fail to complete the installation)
 # Use apt-get install -f to complete the installation with dependencies
 ENV UNIFI_VERSION 5.9.29-04b5d20997
+ENV UNIFI_DOCKER_VERSION 5.9.29
 RUN apt-get update && apt-get install -y --no-install-recommends wget && \
       mkdir -p /tmp/build && \
       cd /tmp/build && \
