Add arm64 arch for 5.9

--- a/templates/manifest.yml
+++ b/templates/manifest.yml
@@ -15,4 +15,9 @@ manifests:
       architecture: arm
       os: linux
       variant: v7
-
+  -
+    image: ryansch/unifi-rpi:{{ docker_version }}-arm64v8
+    platform:
+      architecture: arm64
+      os: linux
+      variant: v8
