--- a/5.9/manifest.yml
+++ b/5.9/manifest.yml
@@ -15,4 +15,9 @@ manifests:
       architecture: arm
       os: linux
       variant: v7
-
+  -
+    image: ryansch/unifi-rpi:5.9.29-arm64v8
+    platform:
+      architecture: arm64
+      os: linux
+      variant: v8
