--- a/5.10/manifest.yml
+++ b/5.10/manifest.yml
@@ -1,19 +1,22 @@
-image: ryansch/unifi-rpi:5.10.16
+image: ryansch/unifi-rpi:5.10.17
 tags:
+  - 5.10
+  - 5
+  - latest
 manifests:
   -
-    image: ryansch/unifi-rpi:5.10.16-amd64
+    image: ryansch/unifi-rpi:5.10.17-amd64
     platform:
       architecture: amd64
       os: linux
   -
-    image: ryansch/unifi-rpi:5.10.16-arm32v7
+    image: ryansch/unifi-rpi:5.10.17-arm32v7
     platform:
       architecture: arm
       os: linux
       variant: v7
   -
-    image: ryansch/unifi-rpi:5.10.16-arm64v8
+    image: ryansch/unifi-rpi:5.10.17-arm64v8
     platform:
       architecture: arm64
       os: linux
