--- a/5.6/Dockerfile.amd64
+++ b/5.6/Dockerfile.amd64
@@ -1,40 +1,26 @@
-FROM debian:stretch
-MAINTAINER Ryan Schlesinger <ryan@ryanschlesinger.com>
+FROM openjdk:8-slim-stretch
+LABEL maintainer="Ryan Schlesinger <ryan@ryanschlesinger.com>"
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    wget \
-    ca-certificates \
-    gnupg \
-    dirmngr \
+      wget \
+      ca-certificates \
+      gnupg \
+      dirmngr \
+      apt-transport-https \
     && rm -rf /var/lib/apt/lists/*
-
-RUN apt-key adv --keyserver keyserver.ubuntu.com --recv C0A52C50 && \
-    echo "deb http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main" \
-    > /etc/apt/sources.list.d/webupd8team-java.list && \
-    echo "deb-src http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main" \
-    >> /etc/apt/sources.list.d/webupd8team-java.list && \
-    apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys EEA14886 && \
-    echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections
-
-# Install java before unifi so a controller update doesn't force
-# a rebuild/redownload of java
-ENV JAVA_INSTALLER_VERSION 8u181-1~webupd8~1
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    oracle-java8-installer=${JAVA_INSTALLER_VERSION} \
-    oracle-java8-set-default \
-    && rm -rf /var/lib/apt/lists/* \
-    && rm -rf /var/cache/oracle-jdk8-installer
 
 # Install any version from deb download
 # Use dpkg to mark the package for install (expect it to fail to complete the installation)
 # Use apt-get install -f to complete the installation with dependencies
-ENV UNIFI_VERSION 5.6.40-508ed3ce93
+ENV UNIFI_VERSION 5.6.42
+ENV UNIFI_DOCKER_VERSION 5.6.42
 RUN mkdir -p /tmp/build && \
       cd /tmp/build && \
+      wget -O /etc/apt/trusted.gpg.d/unifi-repo.gpg https://dl.ui.com/unifi/unifi-repo.gpg && \
       wget https://www.ubnt.com/downloads/unifi/${UNIFI_VERSION}/unifi_sysvinit_all.deb && \
       apt-get update && apt-get install -y --no-install-recommends \
-      ./unifi_sysvinit_all.deb \
-      procps && \
+        ./unifi_sysvinit_all.deb \
+        procps && \
       rm -rf /var/lib/apt/lists/* && \
       rm -rf /tmp/build
 
