--- a/5.6/Dockerfile.arm32v7
+++ b/5.6/Dockerfile.arm32v7
@@ -1,33 +1,39 @@
-FROM resin/rpi-raspbian:latest
-MAINTAINER Ryan Schlesinger <ryan@ryanschlesinger.com>
+FROM multiarch/qemu-user-static:arm as qemu
 
-RUN apt-key adv --keyserver keyserver.ubuntu.com --recv C0A52C50 && \
-    echo "deb http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main" \
-    > /etc/apt/sources.list.d/webupd8team-java.list && \
-    echo "deb-src http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main" \
-    >> /etc/apt/sources.list.d/webupd8team-java.list && \
-    apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys EEA14886 && \
-    echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections
+FROM debian:stretch-slim as untar
 
-# Install java before unifi so a controller update doesn't force
-# a rebuild/redownload of java
-ENV JAVA_INSTALLER_VERSION 8u181-1~webupd8~1
+# Due to a missing slash, the qemu-user-static image has
+# the binary copied to the _file_ /usr/bin
+COPY --from=qemu /usr/bin /tmp/qemu-arm-static.tar.gz
+RUN tar -C /usr/bin -zxvf /tmp/qemu-arm-static.tar.gz
+
+FROM arm32v7/openjdk:8-slim-stretch
+LABEL maintainer="Ryan Schlesinger <ryan@ryanschlesinger.com>"
+
+COPY --from=untar /usr/bin/qemu-arm-static /usr/bin/qemu-arm-static
+
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    oracle-java8-installer=${JAVA_INSTALLER_VERSION} \
-    oracle-java8-set-default \
-    && rm -rf /var/lib/apt/lists/* \
-    && rm -rf /var/cache/oracle-jdk8-installer
+      wget \
+      ca-certificates \
+      gnupg \
+      dirmngr \
+    && rm -rf /var/lib/apt/lists/* && \
+    wget https://archive.raspbian.org/raspbian.public.key -O - | apt-key add - && \
+    echo 'deb http://archive.raspbian.org/raspbian stretch main contrib non-free' >> /etc/apt/sources.list
 
 # Install any version from deb download
 # Use dpkg to mark the package for install (expect it to fail to complete the installation)
 # Use apt-get install -f to complete the installation with dependencies
-ENV UNIFI_VERSION 5.6.40-508ed3ce93
+ENV UNIFI_VERSION 5.6.42
+ENV UNIFI_DOCKER_VERSION 5.6.42
 RUN apt-get update && apt-get install -y --no-install-recommends wget && \
       mkdir -p /tmp/build && \
       cd /tmp/build && \
+      wget -O /etc/apt/trusted.gpg.d/unifi-repo.gpg https://dl.ui.com/unifi/unifi-repo.gpg && \
       wget https://www.ubnt.com/downloads/unifi/${UNIFI_VERSION}/unifi_sysvinit_all.deb && \
-      dpkg --install unifi_sysvinit_all.deb ; \
-      apt-get install -f && \
+      apt-get update && apt-get install -y --no-install-recommends \
+        ./unifi_sysvinit_all.deb \
+        procps && \
       rm -rf /var/lib/apt/lists/* && \
       rm -rf /tmp/build
 
