--- a/5.10/Dockerfile.amd64
+++ b/5.10/Dockerfile.amd64
@@ -12,9 +12,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Install any version from deb download
 # Use dpkg to mark the package for install (expect it to fail to complete the installation)
 # Use apt-get install -f to complete the installation with dependencies
-ENV UNIFI_VERSION 5.10.23
-ENV UNIFI_DOCKER_VERSION 5.10.23
-RUN mkdir -p /tmp/build && \
+ENV UNIFI_VERSION 5.10.24-fc15f0fdf1
+ENV UNIFI_DOCKER_VERSION 5.10.24
+RUN mkdir -p /usr/share/man/man1 && \
+      mkdir -p /tmp/build && \
       cd /tmp/build && \
       wget -O /etc/apt/trusted.gpg.d/unifi-repo.gpg https://dl.ui.com/unifi/unifi-repo.gpg && \
       wget https://www.ubnt.com/downloads/unifi/${UNIFI_VERSION}/unifi_sysvinit_all.deb && \
