--- a/templates/Dockerfile.amd64
+++ b/templates/Dockerfile.amd64
@@ -1,5 +1,30 @@
+FROM debian:stretch-slim as tini
+ENV TINI_VERSION v0.18.0
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+      wget \
+      ca-certificates \
+      gnupg \
+      dirmngr \
+      apt-transport-https \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN mkdir -p /tmp/build && \
+	cd /tmp/build && \
+	wget -O tini https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-static${TINI_ARCH} && \
+	wget -O tini.asc https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-static${TINI_ARCH}.asc && \
+  gpg --batch --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 595E85A6B1B4779EA4DAAEC70B588DFF0527A9B7 && \
+  gpg --batch --verify tini.asc tini && \
+	cp tini /sbin/ && \
+	chmod +x /sbin/tini && \
+	cd /tmp && \
+	rm -rf /tmp/build && \
+	rm -rf /root/.gnupg
+
 FROM openjdk:8-slim-stretch
 LABEL maintainer="Ryan Schlesinger <ryan@ryanschlesinger.com>"
+
+COPY --from=tini /sbin/tini /sbin/tini
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
       wget \
@@ -29,6 +54,8 @@ RUN ln -s /var/lib/unifi /usr/lib/unifi/data
 EXPOSE 8080/tcp 8081/tcp 8443/tcp 8843/tcp 8880/tcp 3478/udp
 
 WORKDIR /var/lib/unifi
+ENV JAVA_OPTS -Xmx1024M
 
-ENTRYPOINT ["/usr/bin/java", "-Xmx1024M", "-jar", "/usr/lib/unifi/lib/ace.jar"]
+COPY entrypoint.sh /docker-entrypoint.sh
+ENTRYPOINT ["/sbin/tini", "-g", "--", "/docker-entrypoint.sh"]
 CMD ["start"]
