--- a/5.10/Dockerfile.arm64v8
+++ b/5.10/Dockerfile.arm64v8
@@ -1,9 +1,34 @@
+FROM debian:stretch-slim as tini
+ENV TINI_VERSION v0.18.0
+ENV TINI_ARCH -arm64
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+      wget \
+      ca-certificates \
+      gnupg \
+      dirmngr \
+      apt-transport-https \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN mkdir -p /tmp/build && \
+	cd /tmp/build && \
+	wget -O tini https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-static${TINI_ARCH} && \
+	wget -O tini.asc https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-static${TINI_ARCH}.asc && \
+  gpg --batch --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 595E85A6B1B4779EA4DAAEC70B588DFF0527A9B7 && \
+  gpg --batch --verify tini.asc tini && \
+	cp tini /sbin/ && \
+	chmod +x /sbin/tini && \
+	cd /tmp && \
+	rm -rf /tmp/build && \
+	rm -rf /root/.gnupg
+
 FROM multiarch/qemu-user-static:aarch64 as qemu
 
 FROM arm64v8/openjdk:8-slim-stretch
 LABEL maintainer="Ryan Schlesinger <ryan@ryanschlesinger.com>"
 
 COPY --from=qemu /usr/bin/qemu-aarch64-static /usr/bin/qemu-aarch64-static
+COPY --from=tini /sbin/tini /sbin/tini
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
       wget \
@@ -15,8 +40,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Install any version from deb download
 # Use dpkg to mark the package for install (expect it to fail to complete the installation)
 # Use apt-get install -f to complete the installation with dependencies
-ENV UNIFI_VERSION 5.10.25
-ENV UNIFI_DOCKER_VERSION 5.10.25
+ENV UNIFI_VERSION 5.10.26
+ENV UNIFI_DOCKER_VERSION 5.10.26
 RUN mkdir -p /usr/share/man/man1 && \
       mkdir -p /tmp/build && \
       cd /tmp/build && \
@@ -32,6 +57,8 @@ RUN ln -s /var/lib/unifi /usr/lib/unifi/data
 EXPOSE 8080/tcp 8081/tcp 8443/tcp 8843/tcp 8880/tcp 3478/udp
 
 WORKDIR /var/lib/unifi
+ENV JAVA_OPTS -Xmx512M
 
-ENTRYPOINT ["/usr/bin/java", "-Xmx1024M", "-jar", "/usr/lib/unifi/lib/ace.jar"]
+COPY entrypoint.sh /docker-entrypoint.sh
+ENTRYPOINT ["/sbin/tini", "-g", "--", "/docker-entrypoint.sh"]
 CMD ["start"]
