--- a/5.10/Dockerfile.amd64
+++ b/5.10/Dockerfile.amd64
@@ -37,8 +37,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Install any version from deb download
 # Use dpkg to mark the package for install (expect it to fail to complete the installation)
 # Use apt-get install -f to complete the installation with dependencies
-ENV UNIFI_VERSION 5.10.26
-ENV UNIFI_DOCKER_VERSION 5.10.26
+ENV UNIFI_VERSION 5.10.27-2ad6590363
+ENV UNIFI_DOCKER_VERSION 5.10.27
 RUN mkdir -p /usr/share/man/man1 && \
       mkdir -p /tmp/build && \
       cd /tmp/build && \
