--- a/5.11/Dockerfile.amd64
+++ b/5.11/Dockerfile.amd64
@@ -37,8 +37,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Install any version from deb download
 # Use dpkg to mark the package for install (expect it to fail to complete the installation)
 # Use apt-get install -f to complete the installation with dependencies
-ENV UNIFI_VERSION 5.11.48-0023c8f3bf
-ENV UNIFI_DOCKER_VERSION 5.11.48
+ENV UNIFI_VERSION 5.11.50
+ENV UNIFI_DOCKER_VERSION 5.11.50
 RUN mkdir -p /usr/share/man/man1 && \
       mkdir -p /tmp/build && \
       cd /tmp/build && \
