Remove port 8081 from EXPOSE

--- a/templates/Dockerfile.amd64
+++ b/templates/Dockerfile.amd64
@@ -51,7 +51,7 @@ RUN mkdir -p /usr/share/man/man1 && \
       rm -rf /tmp/build
 
 RUN ln -s /var/lib/unifi /usr/lib/unifi/data
-EXPOSE 8080/tcp 8081/tcp 8443/tcp 8843/tcp 8880/tcp 3478/udp
+EXPOSE 8080/tcp 8443/tcp 8843/tcp 8880/tcp 3478/udp
 
 WORKDIR /var/lib/unifi
 ENV JAVA_OPTS -Xmx1024M
