--- a/5.12/Dockerfile.arm32v7
+++ b/5.12/Dockerfile.arm32v7
@@ -42,8 +42,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Install any version from deb download
 # Use dpkg to mark the package for install (expect it to fail to complete the installation)
 # Use apt-get install -f to complete the installation with dependencies
-ENV UNIFI_VERSION 5.12.35-635f5234a0
-ENV UNIFI_DOCKER_VERSION 5.12.35
+ENV UNIFI_VERSION 5.12.46-d9f4b84b08
+ENV UNIFI_DOCKER_VERSION 5.12.46
 RUN mkdir -p /usr/share/man/man1 && \
       mkdir -p /tmp/build && \
       cd /tmp/build && \
@@ -56,7 +56,7 @@ RUN mkdir -p /usr/share/man/man1 && \
       rm -rf /tmp/build
 
 RUN ln -s /var/lib/unifi /usr/lib/unifi/data
-EXPOSE 8080/tcp 8081/tcp 8443/tcp 8843/tcp 8880/tcp 3478/udp
+EXPOSE 8080/tcp 8443/tcp 8843/tcp 8880/tcp 3478/udp
 
 WORKDIR /var/lib/unifi
 ENV JAVA_OPTS -Xmx512M
