--- a/6.0/manifest.yml
+++ b/6.0/manifest.yml
@@ -1,19 +1,22 @@
-image: ryansch/unifi-rpi:6.0.26
+image: ryansch/unifi-rpi:6.0.27
 tags:
+  - 6.0
+  - 6
+  - latest
 manifests:
   -
-    image: ryansch/unifi-rpi:6.0.26-amd64
+    image: ryansch/unifi-rpi:6.0.27-amd64
     platform:
       architecture: amd64
       os: linux
   -
-    image: ryansch/unifi-rpi:6.0.26-arm32v7
+    image: ryansch/unifi-rpi:6.0.27-arm32v7
     platform:
       architecture: arm
       os: linux
       variant: v7
   -
-    image: ryansch/unifi-rpi:6.0.26-arm64v8
+    image: ryansch/unifi-rpi:6.0.27-arm64v8
     platform:
       architecture: arm64
       os: linux
