--- a/templates/Dockerfile.amd64
+++ b/templates/Dockerfile.amd64
@@ -13,7 +13,7 @@ RUN mkdir -p /tmp/build && \
 	cd /tmp/build && \
 	wget -O tini https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-static${TINI_ARCH} && \
 	wget -O tini.asc https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-static${TINI_ARCH}.asc && \
-  gpg --batch --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 595E85A6B1B4779EA4DAAEC70B588DFF0527A9B7 && \
+  gpg --batch --keyserver  keyserver.ubuntu.com --recv-keys 595E85A6B1B4779EA4DAAEC70B588DFF0527A9B7 && \
   gpg --batch --verify tini.asc tini && \
 	cp tini /sbin/ && \
 	chmod +x /sbin/tini && \
