Fix race condition in tests

--- a/goss_wait.yaml
+++ b/goss_wait.yaml
@@ -32,3 +32,7 @@ process:
     running: true
   mongod:
     running: true
+http:
+  http://127.0.0.1:8080/status:
+    status: 200
+    allow-insecure: true
