Add support for java 11 in 7.3 or greater

--- a/templates/Dockerfile.amd64
+++ b/templates/Dockerfile.amd64
@@ -52,7 +52,7 @@ RUN set -eux; \
         gnupg \
         dirmngr \
         apt-transport-https \
-        openjdk-8-jre-headless \
+        {{ java_package }} \
       ; \
       apt-get clean; \
       rm -f /var/lib/apt/lists/*_*
