--- a/templates/Dockerfile.arm64v8
+++ b/templates/Dockerfile.arm64v8
@@ -1,4 +1,5 @@
-FROM ubuntu:jammy as tini
+# syntax=docker/dockerfile:1
+FROM arm64v8/ubuntu:kinetic as tini
 ENV TINI_VERSION v0.19.0
 ENV TINI_ARCH -arm64
 
@@ -34,15 +35,12 @@ RUN set -eux; \
       rm -rf /tmp/build; \
       rm -rf /root/.gnupg
 
-FROM multiarch/qemu-user-static:aarch64 as qemu
-
-FROM arm64v8/ubuntu:jammy
+FROM arm64v8/ubuntu:kinetic
 LABEL maintainer="Ryan Schlesinger <ryan@ryanschlesinger.com>"
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 ENV DEBIAN_FRONTEND=noninteractive
 
-COPY --from=qemu /usr/bin/qemu-aarch64-static /usr/bin/qemu-aarch64-static
 COPY --from=tini /sbin/tini /sbin/tini
 
 RUN set -eux; \
