Upgrade to ubuntu mantic and lint with hadolint

--- a/templates/Dockerfile.amd64
+++ b/templates/Dockerfile.amd64
@@ -1,5 +1,7 @@
 # syntax=docker/dockerfile:1
-FROM ubuntu:lunar as tini
+# hadolint global ignore=DL3008
+# hadolint global ignore=DL3003
+FROM ubuntu:mantic as tini
 ENV TINI_VERSION v0.19.0
 ENV TINI_ARCH -amd64
 
@@ -17,15 +19,15 @@ RUN set -eux; \
         apt-transport-https \
       ; \
       apt-get clean; \
-      rm -f /var/lib/apt/lists/*_*
+      rm -rf /var/lib/apt/lists/*
 
 RUN set -eux; \
       \
       mkdir -p /tmp/build; \
 	    cd /tmp/build; \
       \
-      wget -O tini https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-static${TINI_ARCH}; \
-      wget -O tini.asc https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-static${TINI_ARCH}.asc; \
+      wget --progress=dot:giga -O tini https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-static${TINI_ARCH}; \
+      wget --progress=dot:giga -O tini.asc https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-static${TINI_ARCH}.asc; \
       gpg --batch --keyserver  keyserver.ubuntu.com --recv-keys 595E85A6B1B4779EA4DAAEC70B588DFF0527A9B7; \
       gpg --batch --verify tini.asc tini; \
       cp tini /sbin/; \
@@ -35,7 +37,7 @@ RUN set -eux; \
       rm -rf /tmp/build; \
       rm -rf /root/.gnupg
 
-FROM ubuntu:lunar
+FROM ubuntu:mantic
 LABEL maintainer="Ryan Schlesinger <ryan@ryanschlesinger.com>"
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
@@ -43,12 +45,12 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 COPY --from=tini /sbin/tini /sbin/tini
 
+# hadolint ignore=SC1083
 RUN set -eux; \
       \
       apt-get update -y; \
       apt-get install -y --no-install-recommends \
         wget \
-        curl \
         ca-certificates \
         gnupg \
         dirmngr \
@@ -56,25 +58,25 @@ RUN set -eux; \
         {{ java_package }} \
       ; \
       apt-get clean; \
-      rm -f /var/lib/apt/lists/*_*
+      rm -rf /var/lib/apt/lists/*
 
 # Adapted from: https://get.glennr.nl/unifi/install/unifi-7.1.67.sh
 RUN set -eux; \
       \
       libssl_temp="$(mktemp --tmpdir=/tmp libssl1.0.2_XXXXX.deb)"; \
-      libssl_url=$(curl -s http://security.ubuntu.com/ubuntu/pool/main/o/openssl1.0/ | grep -io "libssl1.0.0.*amd64.deb" | sed '/u5_/d' | cut -d'"' -f1 | tail -n1); \
-      wget -O "$libssl_temp" "http://security.ubuntu.com/ubuntu/pool/main/o/openssl1.0/${libssl_url}"; \
+      libssl_url=$(wget -qO - http://security.ubuntu.com/ubuntu/pool/main/o/openssl1.0/ | grep -io "libssl1.0.0.*amd64.deb" | sed '/u5_/d' | cut -d'"' -f1 | tail -n1); \
+      wget -qO "$libssl_temp" "http://security.ubuntu.com/ubuntu/pool/main/o/openssl1.0/${libssl_url}"; \
       dpkg -i "$libssl_temp"; \
       rm --force "$libssl_temp" 2> /dev/null; \
       \
       wget -qO - https://www.mongodb.org/static/pgp/server-3.6.asc | gpg --dearmor | tee -a /usr/share/keyrings/mongodb-server-3.6.gpg &> /dev/null; \
       echo "deb [ arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb-server-3.6.gpg ] https://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/3.6 multiverse" &> "/etc/apt/sources.list.d/mongodb-org-3.6.list"; \
       apt-get update -y; \
-      apt-get -y -o Dpkg::Options::='--force-confdef' -o Dpkg::Options::='--force-confold' install \
+      apt-get -y --no-install-recommends -o Dpkg::Options::='--force-confdef' -o Dpkg::Options::='--force-confold' install \
         mongodb-org \
       ; \
       apt-get clean; \
-      rm -f /var/lib/apt/lists/*_*
+      rm -rf /var/lib/apt/lists/*
 
 # Install any version from deb download
 ENV UNIFI_VERSION {{ unifi_version }}
@@ -87,8 +89,8 @@ RUN set -eux; \
       mkdir -p /tmp/build; \
       cd /tmp/build; \
       \
-      wget -O /etc/apt/trusted.gpg.d/unifi-repo.gpg https://dl.ui.com/unifi/unifi-repo.gpg; \
-      wget -O unifi_sysvinit_all.deb https://dl.ui.com/unifi/${UNIFI_VERSION}/unifi_sysvinit_all.deb; \
+      wget -qO /etc/apt/trusted.gpg.d/unifi-repo.gpg https://dl.ui.com/unifi/unifi-repo.gpg; \
+      wget -qO unifi_sysvinit_all.deb https://dl.ui.com/unifi/${UNIFI_VERSION}/unifi_sysvinit_all.deb; \
       echo "${UNIFI_SHA256}  unifi_sysvinit_all.deb" | sha256sum --check; \
       apt-get update -y; \
       apt-get install -y --no-install-recommends \
@@ -96,7 +98,7 @@ RUN set -eux; \
         procps \
       ; \
       apt-get clean; \
-      rm -f /var/lib/apt/lists/*_*; \
+      rm -rf /var/lib/apt/lists/*; \
       rm -rf /tmp/build
 
 COPY script.sed /tmp/script.sed
