--- a/8.1/Dockerfile.amd64
+++ b/8.1/Dockerfile.amd64
@@ -56,7 +56,7 @@ RUN set -eux; \
         gnupg \
         dirmngr \
         apt-transport-https \
-        {{ java_package }} \
+        openjdk-8-jre-headless \
       ; \
       apt-get clean; \
       rm -rf /var/lib/apt/lists/*
@@ -75,9 +75,9 @@ RUN set -eux; \
       rm -rf /var/lib/apt/lists/*
 
 # Install any version from deb download
-ENV UNIFI_VERSION {{ unifi_version }}
-ENV UNIFI_DOCKER_VERSION {{ docker_version }}
-ENV UNIFI_SHA256 {{ unifi_sha256 }}
+ENV UNIFI_VERSION 8.1.127-810cd1e59a
+ENV UNIFI_DOCKER_VERSION 8.1.127
+ENV UNIFI_SHA256 ed78382342aebed6b8a0ace476e09d6bb6a89d3173badad024ad3714ba8cd0a1
 
 RUN set -eux; \
       \
