--- a/8.1/Dockerfile.arm64v8
+++ b/8.1/Dockerfile.arm64v8
@@ -1,9 +1,9 @@
 # syntax=docker/dockerfile:1
 # hadolint global ignore=DL3008
 # hadolint global ignore=DL3003
-FROM ubuntu:noble as tini
+FROM arm64v8/ubuntu:noble as tini
 ENV TINI_VERSION v0.19.0
-ENV TINI_ARCH -amd64
+ENV TINI_ARCH -arm64
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 ENV DEBIAN_FRONTEND=noninteractive
@@ -37,7 +37,7 @@ RUN set -eux; \
       rm -rf /tmp/build; \
       rm -rf /root/.gnupg
 
-FROM ubuntu:noble
+FROM arm64v8/ubuntu:noble
 LABEL maintainer="Ryan Schlesinger <ryan@ryanschlesinger.com>"
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
@@ -56,7 +56,7 @@ RUN set -eux; \
         gnupg \
         dirmngr \
         apt-transport-https \
-        {{ java_package }} \
+        openjdk-8-jre-headless \
       ; \
       apt-get clean; \
       rm -rf /var/lib/apt/lists/*
@@ -75,9 +75,9 @@ RUN set -eux; \
       rm -rf /var/lib/apt/lists/*
 
 # Install any version from deb download
-ENV UNIFI_VERSION {{ unifi_version }}
-ENV UNIFI_DOCKER_VERSION {{ docker_version }}
-ENV UNIFI_SHA256 {{ unifi_sha256 }}
+ENV UNIFI_VERSION 8.1.127-810cd1e59a
+ENV UNIFI_DOCKER_VERSION 8.1.127
+ENV UNIFI_SHA256 ed78382342aebed6b8a0ace476e09d6bb6a89d3173badad024ad3714ba8cd0a1
 
 RUN set -eux; \
       \
